syntax = "proto3";

package sphere.binding;

import "google/protobuf/descriptor.proto";

option go_package = "github.com/TBXark/sphere/proto/binding/sphere/binding";

enum BindingLocation {
  BINDING_LOCATION_UNSPECIFIED = 0; // Default value, should not be used.
  BINDING_LOCATION_QUERY = 1; // Indicates that the binding is for query parameters.
  BINDING_LOCATION_URI = 2; // Indicates that the binding is for URI parameters.
  BINDING_LOCATION_BODY = 3; // Indicates that the binding is for the body of the request.
}

extend google.protobuf.MessageOptions {
  optional BindingLocation default_location = 136655300;
  repeated string default_auto_tags = 136655301;
}

extend google.protobuf.OneofOptions {
  optional BindingLocation default_oneof_location = 136655310;
  repeated string default_oneof_auto_tags = 136655311;
}

extend google.protobuf.FieldOptions {
  optional BindingLocation location = 136655320;
  repeated string tags = 136655321;
  repeated string auto_tags = 136655322;
}
